# ROS2_Real_Robot

./: README.md
bno055_imu_pub/: package.xml  setup.cfg  setup.py
bno055_imu_pub/bno055_imu_pub/: bno055_node.py  fake_odom_node.py  imu_read.py  odom_to_base_tf_broadcaster.py  tf_broadcaster.py
bno055_imu_pub/config/: slam_toolbox_.yaml
bno055_imu_pub/test/: bno055_launch.py
encoder_odom/: package.xml  setup.py
encoder_odom/encoder_odom/: joystick_motor_control.py  motor_test.py
texto_mobil_description/: CMakeLists.txt  package.xml
texto_mobil_description/launch/: display.launch.py  node_a1.launch.py
texto_mobil_description/urdf/: texto_mobil.urdf.xacro
texto_nav2/: package.xml  setup.cfg  setup.py
texto_nav2/config/: nav2_params.yaml
texto_nav2/launch/: bringup_nav2.launch.py
texto_nav2/maps/: map.pgm  map.yaml
texto_nav2/resource/: texto_nav2
texto_nav2/texto_nav2/scripts/: encoder_odom_node.py  tf_broadcaster.py
texto_slam/: package.xml  setup.cfg  setup.py
texto_slam/config/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml
texto_slam/texto_slam/: bno_node.py  laser_tf_broadcaster.py  node_a1.launch.py  tf_yayın.py
