cmake_minimum_required(VERSION 3.8)
project(texto_mobil_description)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# ROS 2 paket sistemi
find_package(ament_cmake REQUIRED)

# URDF klasörünü install et
install(DIRECTORY urdf/
  DESTINATION share/${PROJECT_NAME}/urdf
)

# Launch dosyalarını install et
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)

# Test sistemleri
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
